[gd_scene load_steps=19 format=3 uid="uid://i8b7a0kr5yp0"]

[ext_resource type="Script" path="res://UIObjects/ConversationSystem/ConversationMenu.gd" id="1_022k8"]
[ext_resource type="Theme" uid="uid://q8fchd6stpns" path="res://UIObjects/Themes/CyberTheme.tres" id="2_d326t"]
[ext_resource type="Texture2D" uid="uid://d3vx1ej6qcmr7" path="res://Content/Demo/Assets/RPGMechanics/ConversationCharacters/Legionnaire/DefaultPortrait.png" id="3_imhq8"]
[ext_resource type="Shader" path="res://ScratchPad/static.gdshader" id="3_sqfax"]
[ext_resource type="PackedScene" uid="uid://iwafti1d83h1" path="res://ScratchPad/QuestMenu/quest_menu.tscn" id="4_v12yn"]
[ext_resource type="Texture2D" uid="uid://r8si526pnv4t" path="res://Content/Demo/Assets/RPGMechanics/ConversationCharacters/Elf/DefaultPortrait.png" id="5_3tkbs"]
[ext_resource type="Shader" path="res://UIObjects/ConversationSystem/ScanLines2.gdshader" id="5_jq8ow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xn7ct"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="FastNoiseLite" id="FastNoiseLite_17tgl"]
frequency = 0.6

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6vavq"]
noise = SubResource("FastNoiseLite_17tgl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ydeqj"]
resource_local_to_scene = true
shader = ExtResource("5_jq8ow")
shader_parameter/curvature = 2.0
shader_parameter/skip = 1.0
shader_parameter/image_flicker = 1.0
shader_parameter/vignette_flicker_speed = 0.7
shader_parameter/vignette_strength = 0.6
shader_parameter/small_scanlines_speed = 1.0
shader_parameter/small_scanlines_proximity = 1.0
shader_parameter/small_scanlines_opacity = 1.0
shader_parameter/scanlines_opacity = 1.0
shader_parameter/scanlines_speed = 0.75
shader_parameter/scanline_thickness = 0.55
shader_parameter/scanlines_spacing = 1.2
shader_parameter/noise_texture = SubResource("NoiseTexture2D_6vavq")
shader_parameter/image_display_texture = ExtResource("5_3tkbs")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aiiim"]
shader = ExtResource("3_sqfax")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rajho"]
frequency = 0.6

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dvxyo"]
noise = SubResource("FastNoiseLite_rajho")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mpfta"]
resource_local_to_scene = true
shader = ExtResource("5_jq8ow")
shader_parameter/curvature = 2.0
shader_parameter/skip = 1.0
shader_parameter/image_flicker = 1.0
shader_parameter/vignette_flicker_speed = 0.7
shader_parameter/vignette_strength = 0.6
shader_parameter/small_scanlines_speed = 1.0
shader_parameter/small_scanlines_proximity = 1.0
shader_parameter/small_scanlines_opacity = 1.0
shader_parameter/scanlines_opacity = 1.0
shader_parameter/scanlines_speed = 0.9
shader_parameter/scanline_thickness = 0.56
shader_parameter/scanlines_spacing = 0.9
shader_parameter/noise_texture = SubResource("NoiseTexture2D_dvxyo")
shader_parameter/image_display_texture = ExtResource("3_imhq8")

[sub_resource type="Animation" id="Animation_78n7o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/MarginContainer/VBoxContainer/TextPanel/MarginContainer/DialogText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fmvbm"]
resource_name = "type_text_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/MarginContainer/VBoxContainer/TextPanel/MarginContainer/DialogText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84vmj"]
_data = {
"RESET": SubResource("Animation_78n7o"),
"type_text_animation": SubResource("Animation_fmvbm")
}

[node name="ConversationMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_022k8")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1250, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -599.0
offset_top = -351.0
offset_right = 601.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_d326t")
theme_override_styles/panel = SubResource("StyleBoxFlat_xn7ct")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CharacterImage" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_imhq8")

[node name="ScanLinesOverlay" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CharacterImage"]
custom_minimum_size = Vector2(100, 250)
layout_mode = 1
anchors_preset = 0
offset_right = 300.0
offset_bottom = 400.0

[node name="ColorRect2" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CharacterImage/ScanLinesOverlay"]
material = SubResource("ShaderMaterial_ydeqj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CharacterImage/ScanLinesOverlay"]
material = SubResource("ShaderMaterial_aiiim")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="ConversationChoiceList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -50.5
offset_right = 36.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="PlayerImage" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_imhq8")

[node name="ScanLinesOverlay" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/PlayerImage"]
custom_minimum_size = Vector2(100, 250)
layout_mode = 1
anchors_preset = 0
offset_right = 300.0
offset_bottom = 400.0

[node name="ColorRect2" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/PlayerImage/ScanLinesOverlay"]
material = SubResource("ShaderMaterial_mpfta")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/PlayerImage/ScanLinesOverlay"]
material = SubResource("ShaderMaterial_aiiim")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogText" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/TextPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[center]This is some sample text. It's very cool and interesting, or, at least I hope it is[/center]

[center]Lorem Ipsum or whatever[/center]

[center]Kerblam Over n' Out[/center]"
fit_content = true
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="QuestMenu" parent="." instance=ExtResource("4_v12yn")]
visible = false
z_index = 1
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_84vmj")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
